src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Category_ID__c</fullName>
        <formula>CASESAFEID(PricebookEntry.Product2.Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details_of_Support__c</fullName>
        <formula>&quot;Up to &quot; &amp; TEXT(Quantity) &amp; &quot; &quot; &amp;   
TEXT(PricebookEntry.Product2.QuantityUnitOfMeasure)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Details of Support</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Applies__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if an Activity or Program Fee applies</description>
        <inlineHelpText>Indicates if an Activity or Program Fee applies</inlineHelpText>
        <label>Fee Applies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Occurrences__c</fullName>
        <label>Number of Occurrences</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TDT_Support_Provided__c</fullName>
        <label>TDT Support Provided</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_value__c</fullName>
        <formula>Quantity  *  UnitPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Units_Per_Occurrence__c</fullName>
        <label>Units Per Occurrence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>